--- a/Views/Home/ExChange.cshtml
+++ b/Views/Home/ExChange.cshtml
@@ -16,6 +16,10 @@
 	<div class="divexchange">
 
 		<legend class="ExchangeEP">Wymiana PLN i EUR</legend>
+		@if (!String.IsNullOrEmpty(ViewBag.Error))
+		{
+			<div class="ViewBagErrorExchange">@ViewBag.Error</div>
+		}
 
 		<div class="form-group">
 			<label class="col-md-4 control-label" for="SelectWho">Wymiana</label>
@@ -56,7 +60,6 @@
 						<label class="col-md-4 control-label" for="AmountPLN">Ilość PLN</label>
 						<div class="col-md-4">
 							<input id="AmountPLN" name="AmountPLN" type="text" class="form-control input-md" required="">
-
 						</div>
 					</div>
 					<div class="form-group">
