--- a/Views/Home/Form.cshtml
+++ b/Views/Home/Form.cshtml
@@ -3,134 +3,105 @@
 }
 @using System.Data
 @model FormData;
-@{
-	int RowCount = 0;
-	var BalanceData = ViewData["BalanceData"] as List<Balance>;
-	if (BalanceData != null)
-	{
-		RowCount = BalanceData.Count;
-	}
-}
 
-@if (RowCount == 0)
-{
-	<div class="test">
-		<fieldset class="Right">
-			<form class="form-horizontal-first" method="post" action="@Url.Action("AddBalance","Function")">
-				<legend>
-					Dodaj swoje saldo PLN i EUR <br />
-					<a style="color:red; font-size:20px">Będziesz mógł to zrobić tylko raz!</a>
-				</legend>
+<div class="test">
+	<fieldset class="Left">
 
-				<div class="form-group">
-					<label class="control-label" for="PLNSaldo">Saldo PLN</label>
-					<div>
-						<input id="PLN" name="PLN" type="number" placeholder="" class="input-md" required="">
-						<div>@Html.ValidationMessageFor(model => model.PLN)</div>
+		<form class="form-horizontal" method="post" action="@Url.Action("AddTransaction","Function")">
+			<legend>@ViewBag.AmountPLN</legend>
+
+
+			<div class="form-group">
+				<label class="col-md-4 control-label" for="Name">Nazwa</label>
+				<div class="col-md-4">
+					<input id="Name" name="Name" type="text" placeholder="Za co" class="form-control input-md" required="">
+				</div>
+			</div>
+			<div class="validation-summary-errors">
+				@{
+					var NameErrors = ViewData.ModelState["Name"];
+					if (NameErrors != null && NameErrors.Errors != null && NameErrors.Errors.Any())
+					{
+						<div>@NameErrors.Errors.First().ErrorMessage</div>
+					}
+				}
+			</div>
+
+			<div class="form-group">
+
+
+				<label id="CenaID" class="col-md-4 control-label" for="Price">Cena</label>
+				<label id="KwotaID" class="col-md-4 control-label" for="Price">Kwota przelewu</label>
+
+				<div class="col-md-4">
+					<input id="Price" name="Price" type="text" placeholder="0,00" class="form-control input-md" required="">
+				</div>
+			</div>
+			<div class="validation-summary-errors">
+				@{
+					var PriceErrors = ViewData.ModelState["Price"];
+					if (PriceErrors != null && PriceErrors.Errors != null && PriceErrors.Errors.Any())
+					{
+						<div>@PriceErrors.Errors.First().ErrorMessage</div>
+					}
+				}
+			</div>
+
+			<div class="form-group">
+				<label class="col-md-4 control-label" for="Currency">Waluta</label>
+				<div class="col-md-4">
+					<div class="radio">
+						<label for="Currency-0">
+							<input type="radio" name="Currency" id="Currency-0" value="1" checked="checked">
+							PLN
+						</label>
+					</div>
+					<div class="radio">
+						<label for="Currency-1">
+							<input type="radio" name="Currency" id="Currency-1" value="2">
+							EUR
+						</label>
 					</div>
 				</div>
+			</div>
 
-				<div class="form-group">
-					<label class="control-label" for="EUROSaldo">Saldo EURO</label>
-					<div>
-						<input id="EURO" name="EURO" type="number" placeholder="" class="input-md" required="">
-						<div>@Html.ValidationMessageFor(model => model.EURO)</div>
+
+			<div class="form-group">
+				<label class="col-md-4 control-label" for="Category">Kategoria</label>
+				<div class="col-md-4">
+					<select id="Category" name="Category" class="form-control">
+						<option value="1">Przelewy</option>
+						<option value="2" selected="selected">Jedzenie</option>
+						<option value="3">Zdrowie</option>
+						<option value="4">Inne</option>
+					</select>
+				</div>
+			</div>
+
+
+
+			<div id="directionDiv" class="form-group">
+				<label class="col-md-4 control-label" for="Who">Kierunek przelewu</label>
+				<div class="col-md-4">
+					<div class="radio">
+						<label for="Who-0">
+							<input type="radio" name="Who" id="Who-0" value="1" checked="checked">
+							Wychodzący
+						</label>
+					</div>
+					<div class="radio">
+						<label for="Who-1">
+							<input type="radio" name="Who" id="Who-1" value="2">
+							Przychodzący
+						</label>
 					</div>
 				</div>
-				<input type="submit" value="Wyślij">
-			</form>
-		</fieldset>
-	</div>
-}
-else
-{
-	<div class="test">
-		<fieldset class="Left">
+			</div>
+			<input class="formbutton" type="submit" value="Wyślij">
 
-			<form class="form-horizontal" method="post" action="@Url.Action("AddTransaction","Function")">
-				<legend>@ViewBag.AmountPLN</legend>
-
-
-				<div class="form-group">
-					<label class="col-md-4 control-label" for="Name">Nazwa</label>
-					<div class="col-md-4">
-						<input id="Name" name="Name" type="text" placeholder="Za co" class="form-control input-md" required="">
-						<div>@Html.ValidationMessageFor(model => model.Name)</div>
-					</div>
-				</div>
-
-
-				<div class="form-group">
-
-
-					<label id="CenaID" class="col-md-4 control-label" for="Price">Cena</label>
-					<label id="KwotaID" class="col-md-4 control-label" for="Price">Kwota przelewu</label>
-
-					<div class="col-md-4">
-						<input id="Price" name="Price" type="text" placeholder="0,00" class="form-control input-md" required="">
-						<div>@Html.ValidationMessageFor(model => model.Price)</div>
-					</div>
-				</div>
-
-
-				<div class="form-group">
-					<label class="col-md-4 control-label" for="Currency">Waluta</label>
-					<div class="col-md-4">
-						<div class="radio">
-							<label for="Currency-0">
-								<input type="radio" name="Currency" id="Currency-0" value="1" checked="checked">
-								PLN
-							</label>
-						</div>
-						<div class="radio">
-							<label for="Currency-1">
-								<input type="radio" name="Currency" id="Currency-1" value="2">
-								EUR
-							</label>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="form-group">
-					<label class="col-md-4 control-label" for="Category">Kategoria</label>
-					<div class="col-md-4">
-						<select id="Category" name="Category" class="form-control">
-							<option value="1">Przelewy</option>
-							<option value="2" selected="selected">Jedzenie</option>
-							<option value="3">Zdrowie</option>
-							<option value="4">Inne</option>
-						</select>
-					</div>
-				</div>
-
-
-
-				<div id="directionDiv" class="form-group">
-					<label class="col-md-4 control-label" for="Who">Kierunek przelewu</label>
-					<div class="col-md-4">
-						<div class="radio">
-							<label for="Who-0">
-								<input type="radio" name="Who" id="Who-0" value="1" checked="checked">
-								Wychodzący
-							</label>
-						</div>
-						<div class="radio">
-							<label for="Who-1">
-								<input type="radio" name="Who" id="Who-1" value="2">
-								Przychodzący
-							</label>
-						</div>
-					</div>
-				</div>
-
-
-				<input class="formbutton" type="submit" value="Wyślij">
-
-			</form>
-		</fieldset>
-	</div>
-}
+		</form>
+	</fieldset>
+</div>
 <script>
 
 	function manageVisibility() {
