--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Data
-@model FormData
+@model WebApplication1.Models.UserLogin;
 @{
     ViewData["Title"] = "Logowanie";
     string error = ViewData["Error"] as string;
@@ -19,7 +19,15 @@
                     <input id="Email" name="Email" type="text" placeholder="email" class="form-control input-md" required>
                 </div>
             </div>
-
+            <div class="validation-summary-errors">
+                @{
+                    var LoginErrors = ViewData.ModelState["Email"];
+                    if (LoginErrors != null && LoginErrors.Errors != null && LoginErrors.Errors.Any())
+                    {
+                        <div class="test">@LoginErrors.Errors.First().ErrorMessage</div>
+                    }
+                }
+            </div>
             
             <div class="form-group">
                 <label class="col-md-4 control-label" for="Password">Hasło</label>
@@ -27,7 +35,15 @@
                     <input id="Password" name="Password" type="password" class="form-control input-md" required>
                 </div>
             </div>
-
+            <div class="validation-summary-errors">
+                @{
+                    var PasswordErrors = ViewData.ModelState["Password"];
+                    if (PasswordErrors != null && PasswordErrors.Errors != null && PasswordErrors.Errors.Any())
+                    {
+                        <div class="test">@PasswordErrors.Errors.First().ErrorMessage</div>
+                    }
+                }
+            </div>
             
             <div class="form-group">
                 <div class="col-md-4">
