Osobne pliki repository, optymalizacja kodu

--- a/Views/Home/FormBalance.cshtml
+++ b/Views/Home/FormBalance.cshtml
@@ -15,7 +15,7 @@
 			<div class="form-group">
 				<label class="control-label" for="PLNSaldo">Saldo PLN</label>
 				<div>
-					<input id="PLN" name="PLN" type="text" placeholder="" class="input-md" required="">
+					<input id="PLN" name="PLN" type="text" placeholder="0,00" class="input-md" required="">
 				</div>
 				<div class="validation-summary-errors">
 					@{
@@ -31,7 +31,7 @@
 			<div class="form-group">
 				<label class="control-label" for="EUROSaldo">Saldo EURO</label>
 				<div>
-					<input id="EURO" name="EURO" type="text" placeholder="" class="input-md" required="">
+					<input id="EURO" name="EURO" type="text" placeholder="0,00" class="input-md" required="">
 				</div>
 				<div class="validation-summary-errors">
 					@{
